nori-rs/tui-pty-e2e/tests/snapshots/acp_tool_calls__acp_multi_call_exploring.snap
---
source: tui-pty-e2e/tests/acp_tool_calls.rs
expression: normalize_for_input_snapshot(contents)
---
› Explore files

• Test message 1Test message 2

• Exploring
  └ Read file1.rs, file2.rs

────────────────────────────────────────────────────────────────────────────────

• Reading multiple files...

• Explored
  └ Read file3.rs

────────────────────────────────────────────────────────────────────────────────

• Multi-call exploring done.

› [DEFAULT_PROMPT]

                                                                        ⎇ master
