nori-rs/tui-pty-e2e/tests/snapshots/acp_tool_calls__acp_no_orphan_tool_cells.snap
---
source: tui-pty-e2e/tests/acp_tool_calls.rs
expression: normalize_for_input_snapshot(contents)
---
› Analyze code

• Running cargo test

────────────────────────────────────────────────────────────────────────────────

• Analyzing the code.

• Ran cargo clippy
  └ No files found

────────────────────────────────────────────────────────────────────────────────

• Here is the final analysis result.

› [DEFAULT_PROMPT]

  ⎇ master · Approvals: Agent
