nori-rs/tui-pty-e2e/tests/snapshots/acp_tool_calls__acp_stuck_tool_calls_agent_message_renders.snap
---
source: tui-pty-e2e/tests/acp_tool_calls.rs
expression: normalize_for_input_snapshot(contents)
---
• Mock ACP options: Model=Mock Default Model, Thought Level=Medium (/config
to change)

› Analyze files

• Exploring
  └ Read app.rs, config.rs, main.rs

────────────────────────────────────────────────────────────────────────────────

• Analysis complete despite incomplete tool calls.

› [DEFAULT_PROMPT]

                                                                        ⎇ master
