nori-rs/tui-pty-e2e/tests/snapshots/acp_tool_calls__acp_tool_call_no_duplicates.snap
---
source: tui-pty-e2e/tests/acp_tool_calls.rs
expression: normalize_for_input_snapshot(contents)
---
• Mock ACP options: Model=Mock Default Model, Thought Level=Medium (/config
to change)

› Test interleaved

• Test message 1Test message 2

• Running test

────────────────────────────────────────────────────────────────────────────────

• Processing command...Interleaved test done.

› [DEFAULT_PROMPT]

                                                                        ⎇ master
