nori-rs/tui-pty-e2e/tests/snapshots/acp_tool_calls__acp_tool_call_rendered.snap
---
source: tui-pty-e2e/tests/acp_tool_calls.rs
expression: normalize_for_input_snapshot(session.screen_contents())
---
› Read test.txt


■ Operation 'AddToHistory' is not supported in ACP mode

─ Worked for 0s ────────────────────────────────────────────────────────────────

• Test message 1Test message 2

• Ran 'Reading configuration file'
  └ (no output)

─ Worked for 0s ────────────────────────────────────────────────────────────────

• Tool call completed successfully.


› [DEFAULT_PROMPT]

  100% context left · ? for shortcuts
